Fix bug with GrantedAuthorities, now Spring Security works perfectly. Add websocket to post new comments with no need to update the page. Delete various unused classes, add user activity tracking( whether the user is (on/off)line). Redesign the following pages: Login, Register, Forgot Password, Get in Touch. Now they use AJAX and JS Validation. Create 2 classes (UserUtils and Utils) with shared logic(DRY). Minify JS code.Add pagination for comments Пофикшен баг,связанный с GrantedAuthorities, теперь Spring Security работает должным образом. Добавил вебсокет для добавления комментариев в "в реальном времени". Удалил различные неиспользуемые классы, добавил отслеживание активности пользователя(онлайн или оффлайн).Передизайнил след. страницы: Логин, Регистрация, Забыл пароль, Свяжитесь с нами: теперь они используют AJAX и JS валидацию. Создал 2 класса (UserUtils and Utils), куда вынес общую логику(DRY)."Уменьшил" (оптимизировал) JS Code.Добавлена пагинация для комментариев.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "MatematixProject",
   "version": "1.0.0",
   "dependencies": {
-    "cropperjs": "^1.5.12"
+    "cropperjs": "^1.5.12",
+    "stompjs": "^2.3.3"
   }
 }
