Fixed Various Bugs, New Styles for Index Пофикшены баги, новые стили для главной страницы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,20 +5,20 @@ spring.mail.password=iqeixvdpuxywjprq
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 # Hibernate Connection Configuration
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/matematix?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=55655565killeR!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/matematix?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=55655565killeR!
 # Hibernate Configuration
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.properties.hibernate.show_sql=true
-spring.datasource.url = jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=user
-spring.datasource.password=user
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-spring.h2.console.enabled=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+#spring.datasource.url = jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=user
+#spring.datasource.password=user
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.defer-datasource-initialization=true
+#spring.h2.console.enabled=true
 # In order to make PUT PATCH DELETE Methods work
 spring.mvc.hiddenmethod.filter.enabled=true
 # Custom H2 Console URL
