--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/matematix?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=55655565killeR!
+spring.datasource.password=root
 # Hibernate Configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.show_sql=true
