Добавил CRUD систему, связанную с сущностями VerificationToken, ResetPasswordToken.
 Создал страницу с настройками, и соотв. функционалом: смена почты и пароля, удаление аккаунта, выход из аккаунта. Создал страницу подписчиков, также логику подписки и отписки от пользователя.

Создал страницу с поиском всех пользователей.
Обновил MathJax.
Описал все классы и методы в соотв. с JavaDoc форматом. Теперь рейтинг пользователя зависит от рейтинга всех его комментариев (суммарный ретйинг)

Signed-off-by: Khaliullin Cyrill <KKRLL56@yandex.ru>

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 target/
-!.mvn/wrapper/maven-wrapper.jar
+
 !**/src/main/**/target/
 !**/src/test/**/target/
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -38,5 +37,7 @@ build/
 *.iws
 *.iml
 *.ipr
+
 ### VS Code ###
 .vscode/
+application.properties
