--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.mail.host = smtp.gmail.com
+# SMTP-?????? Outlook/Office365
+spring.mail.host = smtp.yandex.com
 spring.mail.port = 587
-spring.mail.username=matematixtest@gmail.com
-spring.mail.password=iqeixvdpuxywjprq
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.username = kkrll56@yandex.ru
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required = true
 # Hibernate Connection Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/matematix?useSSL=false&serverTimezone=UTC
