--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.mail.host = smtp.yandex.com
 spring.mail.port = 587
 spring.mail.username = kkrll56@yandex.ru
-
+spring.mail.password = dopwsakfvdxvbyvc
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.properties.mail.smtp.starttls.required = true
