--- a/DockerFile
+++ b/DockerFile
@@ -2,37 +2,27 @@
 # 1) Сборочный этап
 # -----------------------
 FROM maven:3.8.5-openjdk-17 AS builder
-
-# рабочая директория внутри контейнера
 WORKDIR /app
 
-# копируем maven-обёртку и pom.xml, чтобы установить зависимости
-COPY mvnw .
-COPY mvnw.cmd .
-COPY .mvn    .mvn
+# Копируем только pom.xml и загружаем зависимости offline
 COPY pom.xml .
+RUN mvn dependency:go-offline -B
 
-# делаем mvnw исполняемым и загружаем зависимости
-RUN chmod +x mvnw mvnw.cmd && \
-    ./mvnw dependency:go-offline -B
-
-# копируем исходники и собираем jar (пропускаем тесты для ускорения)
+# Копируем исходники и собираем jar (пропускаем тесты)
 COPY src src
-RUN ./mvnw clean package -DskipTests -B
+RUN mvn clean package -DskipTests -B
 
 # -----------------------
 # 2) Рантайм-этап
 # -----------------------
 FROM eclipse-temurin:17-jre
-
-# директория, в которой будет лежать ваш jar
 WORKDIR /app
 
-# копируем собранный jar из предыдущего этапа
+# Копируем готовый Jar из предыдущего этапа
 COPY --from=builder /app/target/*.jar app.jar
 
-# прокидываем порт, на котором запускается Spring Boot
+# Открываем порт
 EXPOSE 8080
 
-# точка входа — запускаем приложение
+# Запускаем приложение
 ENTRYPOINT ["java","-jar","app.jar"]
